# deps

./: .gitignore  Cargo.toml  rustfmt.toml
example_package_jsons/: out.json  test1.json
src/: data.rs  json.rs  logging.rs  main.rs  providers.rs  theme.rs  version.rs
src/data/: npm.rs
src/providers/: npm_provider.rs
