[package]
name = "dps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
log = "0.4.17"
env_logger="0.9.1"
reqwest = { version = "0.11.12" }
serde_json = { version="1.0.9", features = ["preserve_order"]  }
serde = { version="1.0.9", features=["derive"]  }
tokio = { version="1.9.0", features=["net", "macros", "rt-multi-thread", "time"] }
cursive = { version="0.20.0" }
